--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "three": "^0.180.0",
     "tsparticles": "^3.9.1",
     "tsparticles-plugin-emitters": "^2.12.0",
     "web-vitals": "^2.1.4"
