--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nasa-frontend-practice",
   "version": "0.1.0",
-   "homepage": "https://github.com/Fazalul-Ameen/NASA-2025",
+   "homepage": "https://github.com/Fazalul-Ameen.github.io/NASA-2025/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
